:sparkles: feat: 키워드 겹치는 순서대로 내림차순 반영
- 사용자가 선택한 키워드와 많이 겹치는 순으로 내림차순하여 그 중 상위 20개 채용 공고 목록만 이메일 알림에 포함되도록 로직 구현

- [할 일] stream으로 중첩 for문 리팩토링

- [할 일] 채용 공고의 식별자로 '제목' 같은 다른 값 가져오기